# flir-one-pro-lt-v4l2

./: .gitignore  Cargo.toml  Makefile  README.md
scripts/: load_v4l2loopback
src/: flirone.c  font5x7.h  main.rs
